add swagger DOC for Content/PostCategory Controller
